fixed grid of news box

--- a/finance.html
+++ b/finance.html
@@ -20,6 +20,7 @@
     <link type="text/css" rel="stylesheet" href="stylesheet.css">
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+    
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Nunito|Philosopher|Raleway" rel="stylesheet">
 
     <!-- these are for the animation on the yahoo logo -->
@@ -57,9 +58,9 @@
             </ul>
         </div>
     </nav>
-
+<header>
     <img src="photos/cropped-stock-img2.jpg" class="hero-img" alt="stock-exchange-on-computer" style="max-width:100%; height: auto;" class="img-fluid"></img>
-
+</header>
     <div class="container">
         <div class="content" style="line-height: 1.7;">
             <h1 class="page-header" style="padding-bottom: 0;">My Portfolio</h1>
