--- a/index.html
+++ b/index.html
@@ -3,97 +3,175 @@
 
 <head>
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Home - Fake Yahoo Page</title>
-  <!-- BootStap CSS -->
-  <link type="text/css" rel="stylesheet" href="bootstrap.css">
+    <title>Home - Fake Yahoo Page</title>
+    <!-- BootStap CSS -->
+    <link type="text/css" rel="stylesheet" href="bootstrap.css">
 
-  <!-- my own css.-->
-  <link type="text/css" rel="stylesheet" href="stylesheet.css">
+    <!-- my own css.-->
+    <link type="text/css" rel="stylesheet" href="stylesheet.css">
 
-  <!-- favicon -->
-  <link rel="shortcut icon" href="photos/faviconyahoo.ico" type="image/x-icon" />
+    <!-- favicon -->
+    <link rel="shortcut icon" href="photos/faviconyahoo.ico" type="image/x-icon" />
 
-  <!-- Javascript bootstrap -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-
-
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat|Nunito|Philosopher|Raleway" rel="stylesheet">
+    <!-- Javascript bootstrap -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
 
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css" integrity="sha384-OHBBOqpYHNsIqQy8hL1U+8OXf9hH6QRxi0+EODezv82DfnZoV7qoHAZDwMwEJvSw" crossorigin="anonymous">
-  <!-- or -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" integrity="sha384-OHBBOqpYHNsIqQy8hL1U+8OXf9hH6QRxi0+EODezv82DfnZoV7qoHAZDwMwEJvSw" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Nunito|Philosopher|Raleway" rel="stylesheet">
+
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css" integrity="sha384-OHBBOqpYHNsIqQy8hL1U+8OXf9hH6QRxi0+EODezv82DfnZoV7qoHAZDwMwEJvSw" crossorigin="anonymous">
+    <!-- or -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" integrity="sha384-OHBBOqpYHNsIqQy8hL1U+8OXf9hH6QRxi0+EODezv82DfnZoV7qoHAZDwMwEJvSw" crossorigin="anonymous">
 
 
 </head>
 
 <body>
-  
-   <nav class="navbar navbar-expand-lg navbar-light bg-light" style="height: 93px;">
-     
-     <img src="photos/250px-Yahoo_Finance_Logo_2013.png 
-" class="animated hinge .img-responsive" id="yahoologo" style="height=100;"></img> 
 
-   
-    <a class="navbar-brand hiddenlogo" href="#"><span class="mb-0 h2">Fake YAHOO!</span></a>
-   
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light" style="height: 93px;">
+
+        <img src="photos/250px-Yahoo_Finance_Logo_2013.png 
+" class="animated hinge .img-responsive" id="yahoologo" style="height=100;"></img>
+
+
+        <a class="navbar-brand hiddenlogo" href="#"><span class="mb-0 h2">Fake YAHOO!</span></a>
+
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     
     <span class="navbar-toggler-icon"></span>
   
   </button>
 
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Finance Home<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="finance.html">My Portfolio<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="services.html">Services</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-  
-  
-<img src="photos/croppedskyscraper2520x1000.png" class="header-img">
- 
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Finance Home<span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="finance.html">My Portfolio<span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="services.html">Services</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+
+    <img src="photos/croppedskyscraper2520x1000.png" class="header-img">
+
     <!-- Start of News Section -->
     <div class="container-fluid" id="news">
-      <div class="container">
-        <div class="row">
-          <h4>Finance News</h4>
-        </div>
-        <div class="row">
-          <div class="col-sm">
-         <div class="card">
-              <div class="card-img" style="text-align:center;padding-top: 1em;"><img src="photos/gold-ingots-golden-treasure-47047.jpeg" class="news-img"></div>
-              <div class="card-body">
-                <h5 class="card-title">Value of Gold</h5>
-                <p class="card-text">We offer a variety easy to use banking services each loaded with incentives to invest. Click here to find out which account type will best fit your lifestyle and needs.</p>
-              </div>
-            </div>
-          </div>
-            <div class="col-sm">
-              <div class="card">
-                <div class="card-img" style="text-align:center;padding-top: 1em;"><img src="photos/pexels-photo-442577.jpeg" class="news-img"></div>
-                <div class="card-body">
-                  <h5 class="card-title">The Cost of Environmental Protections</h5>
-                  <p class="card-text">We offer a variety easy to use banking services each loaded with incentives to invest. Click here to find out which account type will best fit your lifestyle and needs.</p>
+        <div class="container">
 
-              </div>
+            <div class="row">
+                <div class="col-lg">
+                <h4 style="padding-top: 2em;">Finance News</h4>
+                </div>
             </div>
+
+            <div class="row">
+
+                <div class="col-sm">
+                    <div class="card h-100">
+                        <div class="card-img" style="text-align:center;padding-top: 1em;"><img src="photos/pexels-photo-938963.jpeg" class="card-img"></div>
+                        <div class="card-body">
+                            <small style="text-align: left; line-height: 1; margin-bottom: 0;">August 8, 2018</small>
+                            <h5 class="card-title">Stock Values in 2018</h5>
+                            <p class="card-text">Changes in the economy have caused people to change the way they are using the stock market. Are millenials doomed? This article talks about the stocks that millenials aren't buying anymore.</p>
+                            <p style="text-align: right; text-decoration: underline; "><a href="#">Read Article</a></p>
+                        </div>
+                    </div>
+                </div>
+                <!-- end of featured column of news -->
+
+                <div class="col-sm">
+                    <!-- represents the column that is the news thumbnail section -->
+
+                    <div class="card-block">
+                        <div class="row">
+                            <!-- Row A of thumbnail section -->
+
+                            <div class="col-sm">
+                                <!-- column A of row A -->
+                                <div class="card h-100">
+                                    <div class="card-body">
+
+                                        <small style="text-align: left; line-height: 1; margin-bottom: 0;">August 7, 2018</small>
+                                        <h5 class="card-title" style="line-height: 1; padding-bottom: 0;">Are you Losing Money?</h5>
+                                        <div class="card-img" style="text-align:center;">
+                                            <img src="photos/pexels-photo-462383.jpeg" class="card-img">
+                                        </div>
+
+                                        <p style="text-align: right; text-decoration: underline; "><a href="#">Read Article</a></p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm">
+                                <!-- column B or row A -->
+                                <div class="card h-100">
+                                    <div class="card-body">
+
+                                        <small style="text-align: left; line-height: 1; margin-bottom: 0;">August 6, 2018</small>
+                                        <h5 class="card-title" style="line-height: 1; padding-bottom: 0;">The Value of Gold</h5>
+                                        <div class="card-img" style="text-align:center;">
+                                            <img src="photos/gold-ingots-golden-treasure-47047.jpeg" class="card-img">
+                                        </div>
+
+                                        <p style="text-align: right; text-decoration: underline; "><a href="#">Read Article</a></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- closes row a -->
+                        <div class="row">
+                            <!-- row b of thumbnail section -->
+
+                            <div class="col-sm">
+                                <!-- column a of row b -->
+                                <div class="card h-100">
+                                    <div class="card-body">
+                                        <small style="text-align: left; line-height: 1; margin-bottom: 0;">August 5, 2018</small>
+                                        <h5 class="card-title" style="line-height: 1; padding-bottom: 0;">The Cost of Environmental Protections</h5>
+                                        <div class="card-img" style="text-align:center;">
+                                            <img src="photos/pexels-photo-442577.jpeg" class="card-img">
+                                        </div>
+                                        <p style="text-align: right; text-decoration: underline; "><a href="#">Read Article</a></p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm">
+                                <!-- column B or row A -->
+                                <div class="card h-100">
+                                    <div class="card-body">
+                                        <small style="text-align: left; line-height: 1; margin-bottom: 0;">August 4, 2018</small>
+                                        <h5 class="card-title" style="line-height: 1; padding-bottom: 0;">Fruit-Named Tech Companies</h5>
+                                        <div class="card-img" style="text-align:center;">
+                                            <img src="photos/pexels-photo-209449.jpeg" class="card-img">
+                                        </div>
+                                        <p style="text-align: right; text-decoration: underline; "><a href="#">Read Article</a></p>
+                                    </div>
+                                    <!-- /card-body -->
+                                </div>
+                                <!-- /card-->
+                            </div>
+                            <!-- /column -->
+                        </div>
+                        <!-- /row b -->
+                    </div>
+                    <!-- closes card-block -->
+                </div>
+                <!-- closes news thumbnail column -->
             </div>
-          </div><!-- /row -->
-      </div>
+            <!-- /row of news section-->
+        </div>
+        <!-- /container -->
     </div>
     <!-- /container-fluid -->
     <!-- end of news -->
@@ -101,45 +179,46 @@
 
 
 
-  <!-- services section -->
+    <!-- services section -->
 
-    <!-- Start of News Section -->
-    <div class="container-fluid" id="services" style="margin-top: 2em;"> <a href="services.html">
-        <div class="container">
-            <div class="row">
-                <h4>Our Services</h4>
-            </div>
-            <div class="row">
-                <div class="card-deck">
-                    <div class="card">
-                        <div class="card-img;" style="text-align:center; padding-top: 1em;"><i class="far fa-credit-card fa-5x"></i></div>
-                        <div class="card-body">
-                            <h5 class="card-title">Credit and Loans</h5>
-                            <p class="card-text">We offer a variety of loan options including credit cards, student loans, personal loans and more. We also offer credit checks and advice. Find out more here.</p>
-
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="card-img;" style="text-align:center;padding-top: 1em;"><i class="far fa-money-bill-alt fa-5x"></i></div>
-                        <div class="card-body">
-                            <h5 class="card-title">Bank Accounts</h5>
-                            <p class="card-text">We offer a variety easy to use banking services each loaded with incentives to invest. Click here to find out which account type will best fit your lifestyle and needs.</p>
-
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="card-img;" style="text-align:center;padding-top: 1em;"><i class="fas fa-exchange-alt fa-5x"></i></div>
-                        <div class="card-body">
-                            <h5 class="card-title">Investment Advice</h5>
-                            <p class="card-text">Whether you are planning your retirement or enhancing your wealth, our certified financial advisors are committed to providing you with the best expertise in the industry.</p>
-                        </div>
-                    </div>
+    <!-- Start of Services Section -->
+    <div class="container-fluid" id="services" style="margin-top: 2em;">
+        <a href="services.html">
+            <div class="container">
+                <div class="row">
+                    <h4>Our Services</h4>
                 </div>
-                <!--/deck> -->
+                <div class="row">
+                    <div class="card-deck">
+                        <div class="card">
+                            <div class="card-img" style="text-align:center; padding-top: 1em;"><i class="far fa-credit-card fa-5x"></i></div>
+                            <div class="card-body">
+                                <h5 class="card-title">Credit and Loans</h5>
+                                <p class="card-text">We offer a variety of loan options including credit cards, student loans, personal loans and more. We also offer credit checks and advice. Find out more here.</p>
+
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-img;" style="text-align:center;padding-top: 1em;"><i class="far fa-money-bill-alt fa-5x"></i></div>
+                            <div class="card-body">
+                                <h5 class="card-title">Bank Accounts</h5>
+                                <p class="card-text">We offer a variety easy to use banking services each loaded with incentives to invest. Click here to find out which account type will best fit your lifestyle and needs.</p>
+
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-img;" style="text-align:center;padding-top: 1em;"><i class="fas fa-exchange-alt fa-5x"></i></div>
+                            <div class="card-body">
+                                <h5 class="card-title">Investment Advice</h5>
+                                <p class="card-text">Whether you are planning your retirement or enhancing your wealth, our certified financial advisors are committed to providing you with the best expertise in the industry.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!--/deck> -->
+                </div>
+                <!-- /row -->
             </div>
-            <!-- /row -->
-        </div>
-    </div></a>
+    </div>
     <!-- /container-fluid -->
     <!-- end of services -->
 
@@ -155,7 +234,7 @@
                 <ul class="list-unstyled list-inline text-center" id="social-buttons">
                     <li class="list-inline-item">
                         <a class="btn-floating btn-fb mx-1">
-            <i class="fab fa-facebook-square fa-3x"></i> 
+            <i class="fab fa-facebook-square fa-3x "></i> 
           </a>
                     </li>
                     <li class="list-inline-item">
