--- a/services.html
+++ b/services.html
@@ -19,7 +19,10 @@
     <!-- my own css, much from google for use with sheets -->
     <link type="text/css" rel="stylesheet" href="stylesheet.css">
 
+    <!-- font awesome css link -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+    
+    <!-- Google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Nunito|Philosopher|Raleway" rel="stylesheet">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css" integrity="sha384-OHBBOqpYHNsIqQy8hL1U+8OXf9hH6QRxi0+EODezv82DfnZoV7qoHAZDwMwEJvSw" crossorigin="anonymous">
