sunday night update

--- a/finance.html
+++ b/finance.html
@@ -708,44 +708,44 @@
 
     
     
-    <!-- services section -->
+     <!-- services section -->
 
-    <!-- Start of News Section -->
-    <div class="container-fluid" id="services" style="margin-top: 2em;"> <a href="services.html">
-        <div class="container">
-            <div class="row">
-                <h4>Our Services</h4>
-            </div>
-            <div class="row">
-                <div class="card-deck">
-                    <div class="card">
-                        <div class="card-img;" style="text-align:center; padding-top: 1em;"><i class="far fa-credit-card fa-5x"></i></div>
-                        <div class="card-body">
-                            <h5 class="card-title">Credit and Loans</h5>
-                            <p class="card-text">We offer a variety of loan options including credit cards, student loans, personal loans and more. We also offer credit checks and advice. Find out more here.</p>
-
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="card-img;" style="text-align:center;padding-top: 1em;"><i class="far fa-money-bill-alt fa-5x"></i></div>
-                        <div class="card-body">
-                            <h5 class="card-title">Bank Accounts</h5>
-                            <p class="card-text">We offer a variety easy to use banking services each loaded with incentives to invest. Click here to find out which account type will best fit your lifestyle and needs.</p>
-
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="card-img;" style="text-align:center;padding-top: 1em;"><i class="fas fa-exchange-alt fa-5x"></i></div>
-                        <div class="card-body">
-                            <h5 class="card-title">Investment Advice</h5>
-                            <p class="card-text">Whether you are planning your retirement or enhancing your wealth, our certified financial advisors are committed to providing you with the best expertise in the industry.</p>
-                        </div>
-                    </div>
+    <!-- Start of Services Section -->
+    <div class="container-fluid" id="services" style="margin-top: 2em;">
+            <div class="container">
+                <div class="row">
+                    <h4>Our Services</h4>
                 </div>
-                <!--/deck> -->
+                <div class="row">
+                    <div class="card-deck">
+                         <a href="services.html"><div class="card">
+                            <div class="card-img" style="text-align:center; padding-top: 1em;"><i class="far fa-credit-card fa-5x"></i></div>
+                            <div class="card-body">
+                                <h5 class="card-title">Credit and Loans</h5>
+                                <p class="card-text">We offer a variety of loan options including credit cards, student loans, personal loans and more. Additionally, we offer credit advice and credit checks. Click here to find out more.</p>
+
+                            </div>
+                        </a></div>
+                         <a href="services.html"><div class="card">
+                            <div class="card-img;" style="text-align:center;padding-top: 1em;"><i class="far fa-money-bill-alt fa-5x"></i></div>
+                            <div class="card-body">
+                                <h5 class="card-title">Bank Accounts</h5>
+                                <p class="card-text">We offer a variety of easy to use banking services loaded with incentives to invest. Click here to find out which account type will best fit your lifestyle and needs.</p>
+
+                           </a> </div>
+                        </div>
+                         <a href="services.html"><div class="card">
+                            <div class="card-img;" style="text-align:center;padding-top: 1em;"><i class="fas fa-exchange-alt fa-5x"></i></div>
+                            <div class="card-body">
+                                <h5 class="card-title">Investment Advice</h5>
+                                <p class="card-text">Whether you are planning your retirement or expanding your wealth, our certified financial advisors are committed to providing you with the best expertise in the industry.</p>
+                            </div>
+                       </a> </div>
+                    </div>
+                    <!--/deck> -->
+                </div>
+                <!-- /row -->
             </div>
-            <!-- /row -->
-        </div>
     </div>
     <!-- /container-fluid -->
     <!-- end of services -->
@@ -762,7 +762,7 @@
                 <ul class="list-unstyled list-inline text-center" id="social-buttons">
                     <li class="list-inline-item">
                         <a class="btn-floating btn-fb mx-1">
-            <i class="fab fa-facebook-square fa-3x"></i> 
+            <i class="fab fa-facebook-square fa-3x "></i> 
           </a>
                     </li>
                     <li class="list-inline-item">
