good enough to submit!

--- a/finance.html
+++ b/finance.html
@@ -658,7 +658,7 @@
 
 
             <div class="row">
-                <div class="col-sm">
+                <div class="col-md">
                     <h5 class="form-header" id="form-header" style: "text-align: left; ">Log in for personalized portfolio updates.</h5>
 
                     <button data-toggle="collapse" class="form-button-collapse" data-target="#demo">LOG IN</button>
@@ -687,7 +687,7 @@
 
                 </div><!-- /column -->
 
-                <div class="col-sm">
+                <div class="col-md">
 
                     <img src="photos/pexels-photo-870903.jpeg" id="photo-login" alt="man using cell phone with stock portfolio on screen" class="img photo-login img-fluid" </img>
 </div>
