--- a/news.html
+++ b/news.html
@@ -30,7 +30,8 @@
 </head>
 <style>
     .btn {
-        background-color: #430297;;
+        background-color: #430297;
+        ;
     }
 </style>
 
@@ -56,7 +57,7 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="services.html">Services</a>
-                    </li>
+                </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="news.html">News<span class="sr-only">(current)</span></a>
                 </li>
@@ -72,7 +73,7 @@
             <div class="col-md-8">
 
                 <h1 class="page-header" style="padding-bottom:0; margin-bottom: 0;">Fake YAHOO! News</h1>
-<h5 style="padding-bottom: .5em">The latest fake news and headlines</h5>
+                <h5 style="padding-bottom: .5em">The latest fake news and headlines</h5>
 
                 <!-- Blog Post -->
                 <div class="card mb-4" id="2018aug8">
@@ -112,11 +113,11 @@
                         <a href="#" class="btn btn-primary">Read More &rarr;</a>
                     </div>
                     <div class="card-footer text-muted">
-                       Posted on August 6, 2018 by
+                        Posted on August 6, 2018 by
                         <a href="https://github.com/TammyLaforest/yahoo-finance-tribute-page">Tammy Laforest</a>
                     </div>
                 </div>
-                 <!-- Blog Post -->
+                <!-- Blog Post -->
                 <div class="card mb-4" id="2018aug5">
                     <img class="card-img-top" src="photos/pexels-photo-442577.jpeg" alt="Card image cap">
                     <div class="card-body">
@@ -125,11 +126,11 @@
                         <a href="#" class="btn btn-primary">Read More &rarr;</a>
                     </div>
                     <div class="card-footer text-muted">
-                       Posted on August 5, 2018 by
+                        Posted on August 5, 2018 by
                         <a href="https://github.com/TammyLaforest/yahoo-finance-tribute-page">Tammy Laforest</a>
                     </div>
                 </div>
-                 <!-- Blog Post -->
+                <!-- Blog Post -->
                 <div class="card mb-4" id="2018aug4">
                     <img class="card-img-top" src="photos/pexels-photo-209449.jpeg" alt="Card image cap">
                     <div class="card-body">
@@ -138,7 +139,7 @@
                         <a href="#" class="btn btn-primary">Read More &rarr;</a>
                     </div>
                     <div class="card-footer text-muted">
-                       Posted on August 4, 2018 by
+                        Posted on August 4, 2018 by
                         <a href="https://github.com/TammyLaforest/yahoo-finance-tribute-page">Tammy Laforest</a>
                     </div>
                 </div>
@@ -172,12 +173,12 @@
                 </div>
 
                 <!-- Categories Widget -->
-                <div class="card my-4"  style="font-size: small">
+                <div class="card my-4" style="font-size: small">
                     <h5 class="card-header">Categories</h5>
                     <div class="card-body">
                         <div class="row">
                             <div class="col-lg-6">
-                                <ul class="list-unstyled mb-0" >
+                                <ul class="list-unstyled mb-0">
                                     <li>
                                         <a href="#">Tech</a>
                                     </li>
@@ -210,19 +211,19 @@
                 <div class="card my-4">
                     <h5 class="card-header">My Stocks</h5>
                     <div class="card-body">
-                     <!-- TradingView Widget BEGIN -->
-<div class="tradingview-widget-container">
-  <div class="tradingview-widget-container__widget"></div>
-  <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/symbols/NASDAQ-AAPL/" rel="noopener" target="_blank"><span class="blue-text">AAPL Prices</span></a> by TradingView</div>
-  <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-single-quote.js" async>
-  {
-  "symbol": "NASDAQ:AAPL",
-  "width": "100%",
-  "locale": "en"
-}
-  </script>
-</div>
-<!-- TradingView Widget END -->
+                        <!-- TradingView Widget BEGIN -->
+                        <div class="tradingview-widget-container">
+                            <div class="tradingview-widget-container__widget"></div>
+                            <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/symbols/NASDAQ-AAPL/" rel="noopener" target="_blank"><span class="blue-text">AAPL Prices</span></a> by TradingView</div>
+                            <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-single-quote.js" async>
+                                {
+                                    "symbol": "NASDAQ:AAPL",
+                                    "width": "100%",
+                                    "locale": "en"
+                                }
+                            </script>
+                        </div>
+                        <!-- TradingView Widget END -->
                     </div>
                 </div>
 
