--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="finance.html">My Portfolio<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="finance.html">My Portfolio</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="services.html">Services</a>
