--- a/finance.html
+++ b/finance.html
@@ -4,6 +4,8 @@
 <head>
 
     <title>My Portfolio - Fake Yahoo Page</title>
+    
+    <!--ERIN: You ROCK!-->
 
     <!-- BootStap CSS -->
     <link type="text/css" rel="stylesheet" href="bootstrap.css">
